fixed image responsiveness - img width was broken on mobile

--- a/src/components/content.css
+++ b/src/components/content.css
@@ -9,3 +9,9 @@
 img {
     width: 500px;
 }
+
+@media (max-width: 600px) {
+    img{
+        width: 100%;
+    }
+}
